ocr-text/multi-images-2-txt.sh

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,10 +11,8 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "args": [
-                "--audio", "/home/abner/abner2/zdev/ai/av/a-story-video-maker/04-net-funeral/story_male_cn.mp3",
-                "--subtitle", "/home/abner/abner2/zdev/ai/av/a-story-video-maker/04-net-funeral/story_male_cn.wav.srt",
-                "--output","video-maker/output-refiner.mp4",     
-                "--background","video-maker/cover.jpeg",               
+                "--in-image", "/home/abner/Pictures/1.png",
+                "--out-txt", "/home/abner/Pictures/out.txt",         
             ]
         }
     ]
